GraalVM native-image: default for zinc build, 13MB/22ms binaries
zinc build now produces native binaries by default via GraalVM native-image:
- zinc build hello.zn → transpile → javac → native-image → 13MB binary
- 22ms startup (vs ~800ms on JVM)
- -march=native for host CPU optimization
- --no-native flag to skip native compilation

zinc compiler itself also builds as native binary:
- make native → 20MB zinc binary
- Sub-second compilation for scripts

Pipeline: .zn → Java 25 → javac → native-image → native binary

232 tests, 14 e2e, all passing.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>